[package]
name = "blob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.38"
flate2 = "1.0.24"
serde_json = "1.0.86"
clap = { version = "4.0.15", features = ["derive"] }
async-std = { version = "1.12.0", features = ["attributes"] }
